--- a/navbar.css
+++ b/navbar.css
@@ -26,7 +26,7 @@ img{
 .header{
     height: 72px;
     /* border: 1px solid #ccc; */
-    padding: 0px 30px;
+    padding: 0px 40px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -167,6 +167,9 @@ img{
     text-align: center;
     display: none;
     padding: 10px;
+    border-radius: 5px;
+    gap: 10px;
+    border-top: 1px solid #ccc;
 }
 .profileContainer:hover .profileDetailBox{
     display: block;
@@ -182,7 +185,8 @@ img{
     display: inline;
     padding: 0px 10px;
     border-radius: 10px;
-    background-color: rgb(243, 239, 239);
+    background-color: rgb(152, 149, 149);
+    color: #ffffff;
     font-size: 20px;
 }
 #loginLogoutBtn:hover{
@@ -198,10 +202,11 @@ img{
 .Navigation--menu {
     width: 100%;
     height: 50px;
-    border: 1px solid #ccc;
+    border-top: 1px solid #ccc;
+    border-bottom: 2px solid #ccc;
 }
 .Navigation--menu ul{
-    padding: 0px 35px;
+    padding: 0px 45px;
     margin: 0px;
     list-style: none;
     display: flex;
@@ -217,10 +222,24 @@ img{
 }
 .Navigation--menu ul li a{
     text-decoration: none;
-    color: #5a5959;
+    color: #272727;
+    font-weight: 480;
 }
 .Navigation--menu ul li:hover{
     color: var(--regularTexColor);
     border-bottom: 3px solid var(--textColorForHover);
     cursor: pointer;
+}
+
+
+
+#profileHoverUser--k{
+    display: flex;
+}
+
+#imageProfile-icon{
+    width: 40px;
+    height: 40px;
+    margin-right: 10px;
+    border-radius: 50%;
 }
