--- a/product.css
+++ b/product.css
@@ -1,31 +1,38 @@
 .productAndFilter{
     display: grid;
     grid-template-columns: 1fr 4fr;
-    gap: 30px;
+    /* gap: 30px; */
     width: 90%;
     margin: auto;
 }
 
 .productAndFilter > div:nth-child(1){
-    /* border: 1px solid red; */
-    /* height: 500px; */
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 0px 2px;
 }
 
 .productsSection{
     display: grid;
     grid-template-columns: repeat(4,1fr);
     width: 90%;
-    margin: auto;
+    /* margin: auto; */
+    margin-left: 40px;
     gap: 10px;
+    margin-bottom: auto;
 }
 
 .productsSection > div{
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    border-radius: 5px;
+    border-bottom: 1px solid #ccc;
+    cursor: pointer;
 }
 .cartImg{
     width: 100%;
     padding: 10px;
+}
+.cartImg > img{
+    border-radius: 5px;
+    height: 180px;
 }
 .cartDetail{
     padding: 10px;
@@ -34,20 +41,73 @@
     display: flex;
     gap: 10px;
     align-items: center;
-    font-size: 14px;
-    margin-top: 20px;
+    font-size: 12px;
+    margin-top: 10px;
 }
 .cartRating > p:nth-child(1){
-    background-color: rgb(134, 127, 127);
-    border-radius: 5px;
+    background-color: #3dd78f;
+    border-radius: 20px;
     padding: 3px 10px;
-    font-size: 18px;
+    font-size: 14px;
+    font-weight: bold;
     color: white;
 }
+.cartRating > p:nth-child(2){
+    color: #4f4e4e;
+}
 .freeDeleveryTag{
-    background-color: cyan;
+    background-color: #f6f3f3;
     display: inline;
-    padding: 2px 8px;
-    border-radius: 10px;
-    margin: 30px 0px;
+    padding: 0px 8px;
+    border-radius: 15px;
+    margin: 0;
+    font-size: 12px;
+    color: #4f4e4e;
+}
+
+
+
+.cartDetail > h6{
+    color: #4f4e4e;
+    font-size: 17px;
+}
+
+
+
+/* ********* FILTER PART *********** */
+
+
+.filterSection{
+    background-color: rgb(253, 253, 253);
+    padding: 10px 20px;
+    color: rgb(54, 51, 51);
+    font-weight: 500;
+}
+#priceSort{
+    width: 100%;
+    padding: 5px 8px;
+    background-color: rgb(251, 247, 247);
+}
+
+#filterCategory{
+    /* background-color: rgb(225, 222, 222); */
+    padding-left: 5px;
+}
+#filterCategory  input{
+    font-size: 20px;
+}
+#filterCategory  span, #filterPrice span, #sortRating span{
+    /* padding-right: 10px; */
+    /* border: 1px solid red; */
+    width: 100%;
+    margin-left: 10px;
+}
+#filterCategory > div, #filterPrice > div, #sortRating > div{ 
+    display: flex;
+    align-items: center;
+}
+input[type=radio] {
+    border: 10px;
+    width: 10%;
+    height: 2em;
 }
