--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body{
     width: 100%;
     font-family: 'Roboto', sans-serif;
     color:rgb(51, 51, 51);
+    /* overflow: hidden; */
 }
 
 img{
@@ -28,6 +29,10 @@ img{
     padding:0px 60px;
     margin-top: 50px;
     /* background-color: rgb(245, 254, 253); */
+}
+.Bottom-Footer:hover{
+    background-color: rgb(250, 248, 248);
+
 }
 .Bottom-Footer > div{
     display: flex;
